fixtures/errors/stack_overflow_backtrace.expected
exit_code: 2
--- stdout ---
--- stderr ---
Runtime error: Uncaught WASM trap: wasm trap: call stack exhausted
    at recurse (errors/stack_overflow_backtrace.js:2:1) (x50)
